--- a/style.css
+++ b/style.css
@@ -50,6 +50,11 @@ section {
 cursor: pointer;
 line-height: 100px;
 font-size: 60px;
+
+}
+.tic:hover {
+    background: #acaec5;
+    opacity: 0.7;
 }
 
 button {
