--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h1 {
 
 h2 {
     color: white;
+    mar
 }
 
 section {
@@ -46,10 +47,13 @@ section {
 }
 
 .tic { 
+display: flex;
 cursor: pointer;
 line-height: 100px;
 font-size: 60px;
-
+color: pink;
+justify-content: center;
+align-items: center;
 }
 
 button {
@@ -61,7 +65,7 @@ button {
     border: none;
 }
 
-.popup {
+#popup {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -76,10 +80,10 @@ button {
     align-items: center;
     visibility: hidden;
 }
-.message {
+#message, #no-winner {
     margin-bottom: 35%;
 }
-.close {
+#close {
     position: absolute;
     top: 0;
     right: 0;
@@ -89,12 +93,27 @@ button {
     cursor: pointer;
     font-size: 35px;
 }
-.reset {
+#reset {
     cursor: pointer;
     width: 50%; 
     height: 20%;
 }
+.show {
+    visibility: visible;
+}
 
-.x, .o {
-    color: pink;
+#restart-game {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: linear-gradient(#E68E36, #DD517F);
+    width: 500px;
+    height: 350px;
+    box-shadow: 0 25px 50px #461e52,
+    0 0 0 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
 }
