--- a/style.css
+++ b/style.css
@@ -115,5 +115,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    visibility: hidden;
+    /* visibility: hidden; */
+}
+.hidden {
+    display: none;
 }
