Remove close button and fixed logic to display pop up box for no winner

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
 
 h2 {
     color: white;
-    mar
+
 }
 
 section {
@@ -83,17 +83,8 @@ button {
 #message, #no-winner {
     margin-bottom: 35%;
 }
-#close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 10px 30px;
-    background: transparent;
-    color: white;
-    cursor: pointer;
-    font-size: 35px;
-}
-#reset {
+
+#reset, #restart {
     cursor: pointer;
     width: 50%; 
     height: 20%;
@@ -115,8 +106,5 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* visibility: hidden; */
-}
-.hidden {
-    display: none;
+    visibility: hidden;
 }
